Реальзовать API Public: Подборки событий